@@ -1,5 +1,5 @@
 THE LOUT DOCUMENT FORMATTING SYSTEM (VERSION 3.43)
-BASSER LOUT VERSION 3 COPYRIGHT (C) 1994, 2008 Jeffrey H. Kingston
+BASSER LOUT VERSION 3 COPYRIGHT (C) 1994, 2023 Jeffrey H. Kingston
 
 Jeffrey H. Kingston
 School of Information Technologies
