@@ -28,8 +28,10 @@
 /*                                                                           */
 /*****************************************************************************/
 #include "externs.h"
+#if 0
 #define line_breaker(g)							\
   (vspace(g) > 0 || (units(gap(g)) == FRAME_UNIT && width(gap(g)) > FR))
+#endif
 
 
 /*****************************************************************************/
