@@ -30,7 +30,7 @@
 #include "externs.h"
 #define	NO_SUPPRESS	FALSE
 #define	SUPPRESS	TRUE
-#define word_equal(x, str)  (is_word(type(x)) && StringEqual(string(x), str))
+/* #define word_equal(x, str)  (is_word(type(x)) && StringEqual(string(x), str)) */
 
 
 /*****************************************************************************/
@@ -1415,7 +1415,8 @@ OBJECT FixAndPrintObject(OBJECT x, FULL_LENGTH xmk, FULL_LENGTH xb,
       assert( (type(x) == COL_THR) == (dim == COLM), "FixAndPrintObject: thr!" );
       for( link = Down(x), uplink = Up(x), i = 1;
 	link != x && uplink != x && i < count;
-	link = NextDown(link), uplink = NextUp(uplink), i++ );
+	link = NextDown(link), uplink = NextUp(uplink), i++ )
+	;
       assert( link != x && uplink != x, "FixAndPrintObject: link or uplink!" );
       CountChild(y, link, count)
         ;
